# rcss3d_agent

./: .gitmodules  README.md
.github/workflows/: build_and_test_foxy.yaml  build_and_test_galactic.yaml  build_and_test_humble.yaml
rcss3d_agent/: CHANGELOG.rst  CMakeLists.txt  package.xml
rcss3d_agent/include/rcss3d_agent/: angle_conversion.hpp  connection.hpp  rcss3d_agent.hpp  rcss3d_agent_node.hpp  rcss3d_joint_controller.hpp  sexp_creator.hpp  sexp_parser.hpp  socket.hpp  socketaddress.hpp  visibility_control.h
rcss3d_agent/src/: connection.cpp  connection.hpp  main.cpp  rcss3d_agent.cpp  rcss3d_agent_node.cpp  rcss3d_joint_controller.cpp  rcss3d_joint_controller_node.cpp  sexp_creator.cpp  sexp_creator.hpp  sexp_parser.cpp  sexp_parser.hpp  sexp_vision.cpp  sexp_vision.hpp  socket.cpp  socket.hpp  socketaddress.cpp  socketaddress.hpp
rcss3d_agent/test/: CMakeLists.txt  test_sexp_creator.cpp  test_sexp_parser.cpp  test_sexp_vision.cpp
rcss3d_agent/urdf/: nao.urdf
rcss3d_agent_basic/: CHANGELOG.rst  CMakeLists.txt  package.xml
rcss3d_agent_basic/include/rcss3d_agent_basic/: rcss3d_agent_basic_node.hpp
rcss3d_agent_basic/src/: rcss3d_agent_basic_node.cpp
rcss3d_agent_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rcss3d_agent_msgs/msg/: Accelerometer.msg  AgentState.msg  Ball.msg  Beam.msg  Effector.msg  FieldLine.msg  FieldLineArray.msg  Flag.msg  FlagArray.msg  ForceResistance.msg  GameState.msg  Goalpost.msg  GoalpostArray.msg  GyroRate.msg  Hear.msg  HingeJoint.msg  HingeJointPos.msg  HingeJointVel.msg  JointCommand.msg  JointPositionCommand.msg  Percept.msg  Player.msg  Robot.msg  RobotArray.msg  Say.msg  Spherical.msg  Synchronize.msg  UniversalJointPos.msg  UniversalJointVel.msg  Vision.msg
rcss3d_agent_msgs_to_soccer_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
rcss3d_agent_msgs_to_soccer_interfaces/include/rcss3d_agent_msgs_to_soccer_interfaces/: conversion.hpp
rcss3d_agent_msgs_to_soccer_interfaces/src/: conversion.cpp  deg2rad.hpp  polar_to_point.hpp
rcss3d_agent_msgs_to_soccer_interfaces/test/: CMakeLists.txt  test_conversion.cpp  test_polar_to_point.cpp
rcss3d_agent_node/: CMakeLists.txt  package.xml
rcss3d_agent_node/include/rcss3d_agent_node/: rcss3d_agent_node.hpp
rcss3d_agent_node/src/: main.cpp  rcss3d_agent_node.cpp
rcss3d_agent_soccer/: CMakeLists.txt  package.xml
rcss3d_agent_soccer/include/rcss3d_agent_soccer/: sim_to_soccer_vision_3d.hpp
rcss3d_agent_soccer/src/: deg2rad.hpp  polar_to_point.hpp  sim_to_soccer_vision_3d.cpp
rcss3d_agent_soccer/test/: CMakeLists.txt  test_polar_to_point.cpp  test_sim_to_soccer_vision_3d.cpp
