<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rcss3d_agent_basic</name>
  <version>0.0.6</version>
  <description>Basic rcss3d agent node that uses rcss3d_agent_msgs</description>
  <maintainer email="kenjibrameld@gmail.com">ijnek</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rcss3d_agent</depend>
  <depend>rclcpp_components</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
